infra/be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-be-app
  labels:
    app: movie-be-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-be-app
  template:
    metadata:
      labels:
        app: movie-be-app
    spec:
      containers:
      - name: movie-be-app
        image: kennybk/movie-be:v4
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  type: NodePort
  selector:
    app: movie-be-app
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
