infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - secretName: my-cert-secret
    hosts:
    - kennybk.site
  rules:
  - host: kennybk.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 8080
